# rand_viz

./: CMakeLists.txt
src/bmpLib/: bmpLib.c  bmpLib.h
src/rand_viz/: main.c
test/: CMakeLists.txt  bmpLibTest.c
